# Gate-Pass-backend

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
api/: urls.py  views.py
apps/core/: admin.py  models.py  serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_hostel_warden.py
apps/leave/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/leave/migrations/: 0001_initial.py  0002_remove_leaverequest_parents_name_and_more.py  0003_remove_leaverequest_student_leaverequest_user.py  0004_leaverequest_approvedby_hod_at_and_more.py  0005_leaverequest_rejected_at_leaverequest_rejected_by_and_more.py  0006_gatepass_delete_leave.py  0007_leaverequest_approvedby_admin_and_more.py  0008_gatepass_code_alter_leaverequest_final_status_and_more.py
apps/notifications/: background.py  services.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_staff_role_alter_user_usertype.py  0002_student_parents_name_student_parents_number.py  0003_alter_staff_role.py  0004_remove_staff_department_wardenprofile.py  0005_remove_student_branch_staff_department_and_more.py  0006_student_room_number.py  0007_alter_staff_role.py
config/: settings.py  urls.py
